# m3bie

./: CMakeLists.txt  Makefile.am  README.md  configure.ac
animations/: m3hand_mh18_postures.yml  m3hand_mh24_postures.yml
python/scripts/: m3simc_demo_head.py
real_meka/animations/: m3hand_mh26_postures.yml
real_meka/robot_config/: m3_config.yml  m3_config.yml.in  m3_config.ymlbak  m3_velctrl_config.yml  shm_humanoid_config.yml
real_meka/ros_config/: bie_min.launch  frames.gv  package.xml
robot_config/: m3_config.yml  shm_humanoid_config.yml
robot_config/ma29/: m3actuator_ec_ma29_j0.yml  m3actuator_ec_ma29_j2.yml  m3actuator_ec_ma29_j3.yml  m3actuator_ec_ma29_j4.yml  m3actuator_ma29_j2.yml  m3actuator_ma29_j3.yml  m3actuator_ma29_j4.yml  m3actuator_ma29_j5.yml  m3actuator_ma29_j6.yml  m3ctrl_simple_ma29_j0.yml  m3ctrl_simple_ma29_j1.yml  m3ctrl_simple_ma29_j5.yml  m3ctrl_simple_ma29_j6.yml  m3dynamatics_right_fts_ma29.yml  m3dynamatics_right_ma29.yml  m3joint_ma29_j0.yml  m3joint_ma29_j2.yml  m3joint_ma29_j3.yml  m3joint_ma29_j4.yml  m3joint_ma29_j5.yml  m3joint_ma29_j6.yml  m3loadx6_ec_ma29_l0.yml
robot_config/ma30/: m3actuator_ec_ma30_j1.yml  m3actuator_ec_ma30_j2.yml  m3actuator_ma30_j2.yml  m3actuator_ma30_j3.yml  m3actuator_ma30_j4.yml  m3ctrl_simple_ma30_j0.yml  m3ctrl_simple_ma30_j1.yml  m3ctrl_simple_ma30_j2.yml  m3ctrl_simple_ma30_j3.yml  m3ctrl_simple_ma30_j5.yml  (+8 more)
ros_config/: bie.launch
trunk/python/: Makefile.am
trunk/python/scripts/: m3simc_demo_arm_beh.py  m3simc_demo_full_beh.py  m3simc_demo_ledx2xn_ears.py  m3simc_demo_postures.py
(+509 files in other folders)
