cmake_minimum_required(VERSION 2.8)
project(m3bie)

SET(CMAKE_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}")

SET(M3_CONFIG_FILE "m3_config.yml")
SET(M3_CONFIG_PATH "real_meka/robot_config/")
SET(M3VIRTUAL_CONFIG_PATH "virtual_meka/robot_config/")

configure_file( ${PROJECT_SOURCE_DIR}/${M3_CONFIG_PATH}${M3_CONFIG_FILE}.in ${CMAKE_CURRENT_BINARY_DIR}/${M3_CONFIG_PATH}${M3_CONFIG_FILE} ) 
configure_file( ${PROJECT_SOURCE_DIR}/${M3VIRTUAL_CONFIG_PATH}${M3_CONFIG_FILE}.in ${CMAKE_CURRENT_BINARY_DIR}/${M3VIRTUAL_CONFIG_PATH}${M3_CONFIG_FILE} ) 

file(GLOB DEPLOY_DIRS "${PROJECT_SOURCE_DIR}/real_meka" "${PROJECT_SOURCE_DIR}/virtual_meka")
foreach(ITEM ${DEPLOY_DIRS})
   IF( IS_DIRECTORY "${ITEM}" )
      LIST( APPEND DIRS_TO_DEPLOY "${ITEM}" )
   ENDIF()
endforeach()

INSTALL( DIRECTORY ${DIRS_TO_DEPLOY} DESTINATION ${CMAKE_INSTALL_DIR} )
INSTALL( FILES ${CMAKE_CURRENT_BINARY_DIR}/${M3_CONFIG_PATH}${M3_CONFIG_FILE} DESTINATION ${CMAKE_INSTALL_DIR}/${M3_CONFIG_PATH} )
INSTALL( FILES ${CMAKE_CURRENT_BINARY_DIR}/${M3VIRTUAL_CONFIG_PATH}${M3_CONFIG_FILE} DESTINATION ${CMAKE_INSTALL_DIR}/${M3VIRTUAL_CONFIG_PATH} )
