
#pkgpython_PYTHON = \
#	m3simc/__init__.py\
#	m3simc/example_pb2.py\
#	m3simc/example.py


dist_bin_SCRIPTS = \
	scripts/m3simc_demo_head.py\
	scripts/m3simc_demo_postures.py\
	scripts/m3simc_demo_full_beh.py\
	scripts/m3simc_demo_arm_beh.py\
	scripts/m3simc_demo_ledx2xn_ears.py

#	scripts/m3simc_example.py
